// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-framework (evaluate) - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Evaluate AI agents and workflows built with Microsoft Agent Framework using pytest-agent-evals plugin. Supports built-in and custom evaluators with VS Code Test Explorer integration.
USE FOR: evaluate agent, test agent, assess agent, agent evaluation, pytest evaluation, measure agent performance, agent quality, add evaluator, evaluation dataset, judge model.
DO NOT USE FOR: creating agents (use agent/create), deploying agents (use agent/deploy), evaluating non-Agent-Framework agents.
",
  "extractedKeywords": [
    "agent",
    "agents",
    "assess",
    "azure",
    "built",
    "built-in",
    "cli",
    "code",
    "create",
    "creating",
    "custom",
    "dataset",
    "deploy",
    "deploying",
    "evaluate",
    "evaluating",
    "evaluation",
    "evaluator",
    "evaluators",
    "explorer",
    "framework",
    "function",
    "integration",
    "judge",
    "mcp",
    "measure",
    "microsoft",
    "model",
    "non-agent-framework",
    "performance",
    "plugin",
    "pytest",
    "pytest-agent-evals",
    "quality",
    "supports",
    "test",
    "using",
    "with",
    "workflows",
  ],
  "name": "agent-framework",
}
`;

exports[`agent-framework (evaluate) - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "assess",
  "azure",
  "built",
  "built-in",
  "cli",
  "code",
  "create",
  "creating",
  "custom",
  "dataset",
  "deploy",
  "deploying",
  "evaluate",
  "evaluating",
  "evaluation",
  "evaluator",
  "evaluators",
  "explorer",
  "framework",
  "function",
  "integration",
  "judge",
  "mcp",
  "measure",
  "microsoft",
  "model",
  "non-agent-framework",
  "performance",
  "plugin",
  "pytest",
  "pytest-agent-evals",
  "quality",
  "supports",
  "test",
  "using",
  "with",
  "workflows",
]
`;
